# glacier_delete

./: .gitignore  Cargo.toml  flake.nix
src/: aws_service.rs  file_service.rs  inventory.rs  main.rs  models.rs
