[package]
name = "glacier_delete"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
aws-config = "1.8.6"
aws-sdk-glacier = "1.84.0"
dotenvy = "0.15.7"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
